# RouterOS

./: .gitignore  README.md  pyproject.toml
routeros/: routeros.py
routeros/system/: __init__.py  clock.py  identity.py  license.py  note.py  resource.py
tests/: test_routeros.py
